fix(SpiralControls): allow scrollable controls on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -26,6 +26,7 @@
 .controlsContainer {
   grid-area: controls;
   border-block-end: 2px solid var(--bulma-border);
+  overflow-x: auto;
 }
 
 .companiesContainer {
